<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mobileNumberFragment">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.a2by3_android.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.a2by3_android.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.a2by3_android.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.example.a2by3_android.ui.signup.SignupFragment"
        android:label="fragment_signup"
        tools:layout="@layout/fragment_signup" />
    <fragment
        android:id="@+id/mobileNumberFragment"
        android:name="com.example.a2by3_android.ui.signup.mobilenumber.MobileNumberFragment"
        android:label="fragment_mobile_number"
        tools:layout="@layout/fragment_mobile_number" />
</navigation>