<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgotpassword.ForgotPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/guidelineTvSignIn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvEnterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_email_below"
        android:textSize="15sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tvEnterEmail"
        app:layout_constraintStart_toStartOf="@id/tvEnterEmail" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeColor="#FFF"
        app:boxBackgroundColor="#FFF"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:background="@drawable/ic_white_rectangle" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/continue_next"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/ic_purple_rectangle"
        android:textColor="@color/white"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="@id/etEmailLayout"
        app:layout_constraintEnd_toEndOf="@id/etEmailLayout"
        app:layout_constraintTop_toBottomOf="@id/etEmailLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>