<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTvVerificationCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <TextView
        android:id="@+id/tvSignInAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_verification_code"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@id/guidelineTvVerificationCode"
        app:layout_constraintStart_toStartOf="@id/ivBack" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code_via_sms"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignInAccount"
        app:layout_constraintStart_toStartOf="@id/tvSignInAccount" />

    <com.mukesh.OtpView
        android:id="@+id/etOtpCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:itemBackground="@drawable/ic_white_rectangle"
        android:textColor="@color/purple"
        app:OtpItemCount="6"
        app:OtpViewType="none"
        app:OtpItemSpacing="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/tvDidntReceiveOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/didnt_receive_it"
        android:textSize="16sp"
        android:textColor="@color/purple"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etOtpCode" />

    <TextView
        android:id="@+id/tvClickHere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here"
        android:textSize="16sp"
        android:textColor="@color/pink"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/tvDidntReceiveOtp"
        app:layout_constraintTop_toTopOf="@id/tvDidntReceiveOtp" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/pink"
        app:layout_constraintTop_toBottomOf="@id/tvClickHere"
        app:layout_constraintStart_toStartOf="@id/tvClickHere"
        app:layout_constraintEnd_toEndOf="@id/tvClickHere" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etOtpCode" />

</androidx.constraintlayout.widget.ConstraintLayout>