<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signup.mobilenumber.MobileNumberVerificationFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTvVerifyNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <TextView
        android:id="@+id/tvVerifyMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_mobile"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@id/guidelineTvVerifyNumber"
        app:layout_constraintStart_toStartOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvVerificationText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_on_mobile"
        android:textSize="16sp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvVerifyMobile" />

    <LinearLayout
        android:id="@+id/lytMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/ic_white_rectangle_with_border"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_defaultNameCode="IT"
            android:layout_gravity="center"
            app:ccp_hideNameCode="true"
            app:ccp_enablePhoneAutoFormatter="false"
            android:layout_marginStart="24dp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:background="@color/border" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/enter_your_number"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@null"
            android:layout_gravity="center"
            android:inputType="number"
            android:imeOptions="actionDone"
            android:layout_marginEnd="16dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/ic_purple_rectangle"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/lytMobileNumber"
        app:layout_constraintEnd_toEndOf="@id/lytMobileNumber"
        app:layout_constraintTop_toBottomOf="@id/lytMobileNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>