<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.signin.SignInFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="16dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <TextView
        android:id="@+id/tvSignInAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="@id/guidelineTvSignIn"
        app:layout_constraintStart_toStartOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvSignInAccount"
        app:layout_constraintStart_toStartOf="@id/tvSignInAccount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etEmailLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeColor="#FFF"
        app:boxBackgroundColor="#FFF"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:padding="8dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:background="@drawable/ic_white_rectangle" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_password"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etEmailLayout"
        app:layout_constraintStart_toStartOf="@id/tvSignInAccount" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:boxStrokeColor="#FFF"
        app:boxBackgroundColor="#FFF"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:padding="8dp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:background="@drawable/ic_white_rectangle" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_passowrd"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/etPasswordLayout" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/ic_purple_rectangle"
        android:textColor="@color/white"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@id/etPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

    <TextView
        android:id="@+id/tvOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="12sp"
        android:textColor="@color/light_grey"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnSignIn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="@id/btnSignIn"
        app:layout_constraintEnd_toStartOf="@id/tvOr"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"/>

    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@id/tvOr"
        app:layout_constraintEnd_toEndOf="@id/btnSignIn"
        app:layout_constraintTop_toTopOf="@id/tvOr"
        app:layout_constraintBottom_toBottomOf="@id/tvOr"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/ic_pink_rectangle"
        android:textSize="16sp"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/white"
        android:gravity="center"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvOr"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>