<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".ui.forgotpassword.ResetPasswordFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".15" />

    <TextView
        android:id="@+id/tvCreateNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/create_a_new_passowrd"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guidelineTvSignIn" />

    <TextView
        android:id="@+id/tvChooseStrongPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/choose_a_strong_passowrd"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/tvCreateNewPassword" />

    <TextView
        android:id="@+id/tvCreatStrongPassowrd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:text="@string/create_a_strong_password"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChooseStrongPassword" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvCreatStrongPassowrd"
        app:layout_constraintStart_toStartOf="@id/tvCreatStrongPassowrd"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_white_rectangle"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvRepeatPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/repeat_password"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPasswordLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etRepeatPasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@id/tvRepeatPassword"
        app:layout_constraintStart_toStartOf="@id/tvRepeatPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_white_rectangle"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="8dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:background="@drawable/ic_purple_rectangle"
        android:textColor="@color/white"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@id/etPasswordLayout"
        app:layout_constraintEnd_toEndOf="@id/etPasswordLayout"
        app:layout_constraintTop_toBottomOf="@id/etRepeatPasswordLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>